--- a/notebooks/EDA_Heart_Disease.ipynb
+++ b/notebooks/EDA_Heart_Disease.ipynb
@@ -198,6 +198,75 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5430f3fc",
+   "metadata": {},
+   "source": [
+    "### Chest paint tyep\n",
+    "\n",
+    "- 1=typical angina (exertion-related, relieved by rest)\n",
+    "- 2=atypical angina (non-classic chest discomfort)\n",
+    "- 3=non-anginal pain (from digestion or musculoskeletal issues)\n",
+    "- 4=asymptomatic (no pain, often severe disease)\n",
+    "\n",
+    "### Blood Pressure (BP)\n",
+    "\n",
+    "- Values ≥140 indicate hypertension, a key risk for atherosclerosis and heart strain\n",
+    "\n",
+    "### Cholesterol\n",
+    "\n",
+    "- Serum level in mg/dl reflects blood lipids\n",
+    "- more than 200 mg/dl heightens artery plaque risk, narrowing vessels and limiting heart blood flow. \n",
+    "- High cholesterol independently predicts coronary disease, especially with other factors\n",
+    "\n",
+    "### FBS over 120\t\n",
+    "\n",
+    "- Binary (1=yes, 0=no): Indicates diabetes or impaired glucose\n",
+    "\n",
+    "### EKG results\t\n",
+    "\n",
+    "- 0=normal, \n",
+    "- 1=ST-T wave abnormality, \n",
+    "- 2=left ventricular hypertrophy\n",
+    "\n",
+    "### Max HR\t\n",
+    "\n",
+    "- Peak rate during exercise\n",
+    "- Lower values (<140 bpm) imply poor cardiac reserve\n",
+    "\n",
+    "### Exercise angina\t\n",
+    "\n",
+    "- Binary (1=yes, 0=no)\n",
+    "- Chest pain from exertion signals myocardial oxygen demand exceeding supply due to blockages\n",
+    "\n",
+    "### ST depression\t\n",
+    "\n",
+    "- Numeric (0-6.2)\n",
+    "- Measures exercise-induced ST segment drop on EKG\n",
+    "- Quantifying ischemia severity—higher values mean worse subendocardial oxygen mismatch\n",
+    "\n",
+    "### Slope of ST\t\n",
+    "\n",
+    "- Peak exercise ST slope \n",
+    "- 1=upsloping=normal\n",
+    "- 2=flat=ischemia possible\n",
+    "- 3=downsloping=definite ischemia\n",
+    "- Downsloping indicates severe coronary disease via poor recovery\n",
+    "\n",
+    "### Number of vessels fluro\t\n",
+    "\n",
+    "- Values (0-3) \n",
+    "- Angiographic count of narrowed vessels (LAD, LCX, RCA, etc.) by fluoroscopy\n",
+    "- More vessels mean multivessel disease and worse prognosis\n",
+    "\n",
+    "### Thallium\n",
+    "\n",
+    "- 3=normal\n",
+    "- 6=fixed defect=scar\n",
+    "- 7=reversible defect=ischemia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Target Distribution"
@@ -399,14 +468,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "63667e8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "import catboost\n",
-    "import xgboost\n",
     "\n",
     "with open(r\"F:\\Bacancy\\Heart_disease_MLflow\\models\\cat_best.pkl\", \"rb\") as f:\n",
     "    cat_model = pickle.load(f)\n",
