--- a/notebooks/EDA_Heart_Disease.ipynb
+++ b/notebooks/EDA_Heart_Disease.ipynb
@@ -622,6 +622,35 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac50b444",
+   "metadata": {},
+   "source": [
+    "# Insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f629362c",
+   "metadata": {},
+   "source": [
+    "> - Chest Pain Type 4 carry the highest disease risk<br>\n",
+    "> Despite reporting no pain, type 4 patients represent a disproportionately large share of \"Presence\" cases.<br>\n",
+    "> Chest Pain Type accounts for 16.6% of feature importance in CatBoost and ~18.2% in XGBoost \n",
+    "\n",
+    "\n",
+    "> - Thallium scan is the strongest structural predictor<br>\n",
+    "> Thallium ranks #1 in XGBoost (highest information gain at ~3,519.9 units) and #2 in CatBoost at 19.3% importance. \n",
+    "> Where value 7 is observed in 71% share of \"presence\" cases\n",
+    "\n",
+    "> - Max HR is the single largest CatBoost feature at 20.5% importance\n",
+    "\n",
+    "> - ST Depression contributes 6.2% (CatBoost) with a 0–6.2 range where higher values = more danger\n",
+    "\n",
+    "> - Cholesterol contributes only ~1.98% importance in CatBoost and FBS over 120 (diabetes indicator) is the lowest-ranked feature at roughly no importance Dispite having strong clinical reputation"
+   ]
   }
  ],
  "metadata": {
